Login si register

--- a/ProjectDAW/appsettings.json
+++ b/ProjectDAW/appsettings.json
@@ -1,5 +1,9 @@
-{ "ConnectionStrings": {
+{
+  "ConnectionStrings": {
     "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=DAWDatabase;Trusted_Connection=True;MultipleActiveResultSets=true"
+  },
+  "AppSettings": {
+    "Secret": "Icanputanystringinhere,becausethekeyisastring,andwillbetreatedasso"
   },
 
   "Logging": {
